--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
       --muted:#9aa4b2;
       --text:#e5e7eb;
       --brand:#6ee7ff;
-      --brand2:#8b5cf6;
       --ring: 0 0 0 2px rgba(110,231,255,.35);
     }
 
@@ -35,9 +34,6 @@
       color:var(--text);
       font:16px/1.6 system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,"Helvetica Neue","Noto Sans",sans-serif
     }
-
-    a{color:var(--brand);text-decoration:none}
-    a:hover{text-decoration:underline}
 
     header{
       position:sticky;
@@ -57,56 +53,30 @@
       height:64px
     }
 
-    .brand{font-weight:700;letter-spacing:.2px}
-
     .menu{display:flex;gap:14px}
-    .menu a{padding:8px 10px;border-radius:10px}
-    .menu a:focus-visible{outline:none;box-shadow:var(--ring)}
+    .menu a{padding:8px 10px;color:#6ee7ff;text-decoration:none}
 
-    /* HERO NATAL */
+    /* HERO LIMPO */
     .hero-natal{
       position:relative;
       min-height:85vh;
       background:url('natal.jpg') center/cover no-repeat;
       display:flex;
-      align-items:center;
+      align-items:flex-end;
+      justify-content:center;
+      padding-bottom:40px;
     }
 
     .hero-natal::before{
       content:"";
       position:absolute;
       inset:0;
-      background:rgba(0,0,0,.55);
+      background:rgba(0,0,0,.25);
     }
-
-    .hero-content{
-      position:relative;
-      max-width:650px;
-      padding:20px;
-    }
-
-    .tag{
-      display:inline-block;
-      padding:4px 12px;
-      border-radius:999px;
-      background:linear-gradient(90deg,#ff5252,#ffca28);
-      color:#2b0000;
-      font-weight:700;
-      font-size:12px;
-      letter-spacing:.4px;
-      margin-bottom:12px
-    }
-
-    h1{
-      font-size:clamp(26px,3.5vw,44px);
-      margin:0 0 12px
-    }
-
-    p{margin:0 0 14px;color:var(--muted)}
 
     .btn-doar{
-      display:inline-block;
-      margin-top:20px;
+      position:relative;
+      z-index:2;
       padding:15px 36px;
       background:#c62828;
       color:#fff;
@@ -117,8 +87,7 @@
     }
 
     .btn-doar:hover{
-      background:#b71c1c;
-      text-decoration:none
+      background:#b71c1c
     }
 
     section{padding:32px 0}
@@ -130,16 +99,14 @@
       padding:22px
     }
 
+    h2{margin-top:0}
+
     footer{
       border-top:1px solid #1f2937;
       margin-top:32px
     }
 
     .small{font-size:13px;color:var(--muted)}
-
-    @media (max-width:860px){
-      .hero-natal{min-height:75vh}
-    }
   </style>
 </head>
 
@@ -149,8 +116,8 @@
   <div class="wrap nav">
     <div class="brand">Nova Fusion Master</div>
     <nav class="menu">
+      <a href="#leitura">Campanha</a>
       <a href="#doacao">Doação</a>
-      <a href="#sobre">Sobre</a>
       <a href="#contato">Contato</a>
     </nav>
   </div>
@@ -158,16 +125,26 @@
 
 <main class="wrap">
 
-  <!-- HERO NATAL -->
+  <!-- HERO -->
   <section class="hero-natal">
-    <div class="hero-content">
-      <span class="tag">🎄 Natal do Bem</span>
-      <h1>Neste Natal, transforme solidariedade em esperança</h1>
+    <a href="#doacao" class="btn-doar">❤️ Quero Doar Agora</a>
+  </section>
+
+  <!-- TEXTO DE LEITURA -->
+  <section id="leitura">
+    <div class="card">
+      <h2>🎄 Natal do Bem</h2>
       <p>
-        Um pequeno gesto seu pode levar alimento, dignidade e alegria
+        Neste Natal, transforme solidariedade em esperança.
+        Um pequeno gesto pode levar alimento, dignidade e alegria
         para famílias que mais precisam.
       </p>
-      <a href="#doacao" class="btn-doar">❤️ Quero Doar Agora</a>
+
+      <p>
+        O <strong>Natal do Bem</strong> é uma campanha solidária criada para
+        arrecadar doações e apoiar famílias em situação de vulnerabilidade,
+        levando não apenas alimentos, mas também esperança e dignidade.
+      </p>
     </div>
   </section>
 
@@ -175,10 +152,7 @@
   <section id="doacao">
     <div class="card">
       <h2>❤️ Faça parte do Natal do Bem</h2>
-      <p>
-        Sua doação ajuda diretamente famílias em situação de vulnerabilidade.
-        Qualquer valor faz diferença.
-      </p>
+      <p>Qualquer valor faz diferença.</p>
 
       <p><strong>PIX para doações:</strong></p>
       <p style="font-size:18px;font-weight:700;color:#fff">
@@ -191,23 +165,12 @@
     </div>
   </section>
 
-  <!-- SOBRE -->
-  <section id="sobre">
-    <div class="card">
-      <h2>Sobre a campanha</h2>
-      <p>
-        O Natal do Bem é uma iniciativa solidária criada para levar esperança,
-        alimento e dignidade a quem mais precisa durante o período natalino.
-      </p>
-    </div>
-  </section>
-
   <!-- CONTATO -->
   <section id="contato">
     <div class="card">
       <h2>Contato</h2>
       <p>
-        E-mail: <a href="mailto:contato@novafusionmaster.com">
+        <a href="mailto:contato@novafusionmaster.com">
         contato@novafusionmaster.com</a>
       </p>
     </div>
@@ -217,7 +180,7 @@
 
 <footer>
   <div class="wrap small" style="padding:16px 0;">
-    © 2025 Nova Fusion Master • Natal do Bem • Hospedado em GitHub Pages
+    © 2025 Nova Fusion Master • Natal do Bem
   </div>
 </footer>
 
